<resources>
    <string name="app_name">Migraines</string>
    <string name="_0_0_0000">0/0/0000</string>
    <string name="agenda_de_migraine">AGENDA DE MIGRAINE</string>
    <string name="date_de_la_crise">Date de la crise</string>
    <string name="intensit">INTENSITÉ</string>
    <string name="mod_r_e">Modérée</string>
    <string name="intense">Intense</string>
    <string name="tr_s_intense">Très intense</string>
    <string name="les_types_de_medicaments">Les types de medicaments</string>

    <string name="selected_item1">Selected item:</string>
    <string-array name="itmAINS">
        <item>Cebutid</item>
        <item>Spedifen 400</item>
        <item>Ketum 100 mg</item>
        <item>Naproxène</item>
        <item>Toprec 25 mg cp</item>
        <item>Profemigr 150</item>
    </string-array>

    <string name="selected_item2">Selected item:</string>
    <string-array name="itmTRIPTAN">
        <item>Imigrane</item>
        <item>Imiject</item>
        <item>Zomig</item>
        <item>Almogran</item>
        <item>Isimig</item>
        <item>Tigreeat</item>
        <item>Relpax</item>
    </string-array>

    <string name="date_de_crise">Date de crise</string>

    <string name="selected_item3">Selected item:</string>
    <string name="text_a">Text_A</string>
    <string name="text_b">Text_B</string>
    <string name="text_c">Text_C</string>
    <string name="text_d">Text_D</string>
    <string name="tres_intense">Tres intense</string>
    <string-array name="itmTDF">
        <item>Nocepton</item>
        <item>Vidora </item>
        <item>Sibelium</item>
        <item>Lopressor lp</item>
        <item>Laroxyl</item>
        <item>Propranolol</item>
    </string-array>

    <string name="selected_intensite">Selected item:</string>
    <string-array name="listIntens">
        <item>Modérée</item>
        <item>Intense </item>
        <item>Très intense</item>
        <item>Insuportable</item>
    </string-array>
</resources>