<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="Traitement de fond : "
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTrip" />

    <Spinner
        android:id="@+id/spinTDF"
        android:layout_width="232dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTDF"
        app:layout_constraintTop_toBottomOf="@+id/txtTrip" />

    <Spinner
        android:id="@+id/spinTrip"
        android:layout_width="279dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTrip"
        app:layout_constraintTop_toBottomOf="@+id/txtAins" />

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/agenda_de_migraine"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btndate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:text="Date De La Crise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <TextView
        android:id="@+id/dateCrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:text="00/00/0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btndate"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <TextView
        android:id="@+id/Intensite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="18dp"
        android:text="@string/intensit"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndate" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="395dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Intensite">

        <RadioButton
            android:id="@+id/radioButton_Modérée"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mod_r_e" />

        <RadioButton
            android:id="@+id/radioButton_intense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intense"
            app:layout_constraintStart_toEndOf="@+id/radioButton_Modérée" />

        <RadioButton
            android:id="@+id/radioButton_TresIntense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tr_s_intense" />

        <RadioButton
            android:id="@+id/radioButton_insupportable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Insupportable" />

    </RadioGroup>

    <TextView
        android:id="@+id/titlTypeMedoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="18dp"
        android:text="LES TYPES DE MEDICAMENTS"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtAins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:text="AINS : "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlTypeMedoc" />

    <TextView
        android:id="@+id/txtTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="Triptan : "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAins" />

    <Spinner
        android:id="@+id/spinAins"
        android:layout_width="281dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAins"
        app:layout_constraintTop_toBottomOf="@+id/titlTypeMedoc" />

    <TextView
        android:id="@+id/dscrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="18dp"
        android:text="DÉSCRIPTIONS !"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTDF" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="233dp"
        android:layout_height="122dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dscrip" />

    <Button
        android:id="@+id/btnValid"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="VALIDÉ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>